# cetoni-ixx-drivers-deb-package

./: 60-cetoni.rules  CMakeLists.txt  README.md
debian/: postinst  preinst  prerm
ixx_driver-1.1.148.0/: Makefile  dkms.conf
