cmake_minimum_required(VERSION 3.10)

set(PROJECT_NAME "ixx_driver")
set(PROJECT_VERSION "1.1.148.0")
set(CMAKE_PREFIX_PATH ${CMAKE_SOURCE_DIR})

set(CETONI_DRIVER_DIRECTORY ${CMAKE_SOURCE_DIR}/ixx_driver-1.1.148.0)
install(
    DIRECTORY ${CETONI_DRIVER_DIRECTORY}
    DESTINATION /usr/src/ )

set(CMAKE_VERBOSE_MAKEFILE ON)


# Debian package manager instructions
set(CPACK_PACKAGE_NAME "cetoni-ixx-drivers")
set(CPACK_GENERATOR "DEB")
set(CPACK_DEBIAN_PACKAGE_DESCRIPTION "IXXAT usb-to-can drivers for Cetoni instruments.")
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "")
set(CPACK_DEBIAN_PACKAGE_PREDEPENDS "gcc, dkms")
set(CPACK_DEBIAN_PACKAGE_CONFLICTS "cetoni-ixx-drivers")

set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE ${CPACK_PACKAGE_ARCHITECTURE})
set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Wizzdev <info@wizzdev.pl>")
set(CPACK_DEBIAN_PACKAGE_PRIORITY "optional")
set(CPACK_DEBIAN_PACKAGE_HOMEPAGE "http://wizzdev.pl")
set(CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA
	${CMAKE_CURRENT_SOURCE_DIR}/debian/preinst
        ${CMAKE_CURRENT_SOURCE_DIR}/debian/postinst
        ${CMAKE_CURRENT_SOURCE_DIR}/debian/prerm
#	${CMAKE_CURRENT_SOURCE_DIR}/debian/postrm
)
set(CPACK_PACKAGE_VENDOR "Wizzdev")
set(CPACK_PACKAGE_VERSION ${PROJECT_VERSION})
set(CPACK_OUTPUT_FILE_PREFIX "dist")
set(CPACK_PACKAGING_INSTALL_PREFIX "/usr/local")
set(CPACK_PACKAGE_FILE_NAME
        ${PROJECT_NAME}_${PROJECT_VERSION}-${CMAKE_SYSTEM_NAME})
include(CPack)



